@@ -517,6 +517,7 @@ const Person::FieldType Person::Id("id_","INTEGER",table__);
 const Person::FieldType Person::Type("type_","TEXT",table__);
 const Person::FieldType Person::Name("name_","TEXT",table__);
 const Person::FieldType Person::Age("age_","INTEGER",table__);
+const Person::FieldType Person::Pubdate("pubdate_","INTEGER",table__);
 std::vector < std::pair< std::string, std::string > > Person::sex_values;
 const Person::FieldType Person::Sex("sex_","INTEGER",table__,sex_values);
 void Person::initValues() {
@@ -527,19 +528,22 @@ void Person::initValues() {
 void Person::defaults() {
     id = 0;
     age = 15;
+    pubdate = 0;
     sex = 0;
 }
 Person::Person(const litesql::Database& db)
-     : litesql::Persistent(db), id(Id), type(Type), name(Name), age(Age), sex(Sex) {
+     : litesql::Persistent(db), id(Id), type(Type), name(Name), age(Age), pubdate(Pubdate), sex(Sex) {
     defaults();
 }
 Person::Person(const litesql::Database& db, const litesql::Record& rec)
-     : litesql::Persistent(db, rec), id(Id), type(Type), name(Name), age(Age), sex(Sex) {
+     : litesql::Persistent(db, rec), id(Id), type(Type), name(Name), age(Age), pubdate(Pubdate), sex(Sex) {
     defaults();
-    size_t size = (rec.size() > 5) ? 5 : rec.size();
+    size_t size = (rec.size() > 6) ? 6 : rec.size();
     switch(size) {
-    case 5: sex = convert<const std::string&, int>(rec[4]);
+    case 6: sex = convert<const std::string&, int>(rec[5]);
         sex.setModified(false);
+    case 5: pubdate = convert<const std::string&, litesql::Date>(rec[4]);
+        pubdate.setModified(false);
     case 4: age = convert<const std::string&, int>(rec[3]);
         age.setModified(false);
     case 3: name = convert<const std::string&, std::string>(rec[2]);
@@ -551,7 +555,7 @@ Person::Person(const litesql::Database& db, const litesql::Record& rec)
     }
 }
 Person::Person(const Person& obj)
-     : litesql::Persistent(obj), id(obj.id), type(obj.type), name(obj.name), age(obj.age), sex(obj.sex) {
+     : litesql::Persistent(obj), id(obj.id), type(obj.type), name(obj.name), age(obj.age), pubdate(obj.pubdate), sex(obj.sex) {
 }
 const Person& Person::operator=(const Person& obj) {
     if (this != &obj) {
@@ -559,6 +563,7 @@ const Person& Person::operator=(const Person& obj) {
         type = obj.type;
         name = obj.name;
         age = obj.age;
+        pubdate = obj.pubdate;
         sex = obj.sex;
     }
     litesql::Persistent::operator=(obj);
@@ -595,6 +600,9 @@ std::string Person::insert(litesql::Record& tables, litesql::Records& fieldRecs,
     fields.push_back(age.name());
     values.push_back(age);
     age.setModified(false);
+    fields.push_back(pubdate.name());
+    values.push_back(pubdate);
+    pubdate.setModified(false);
     fields.push_back(sex.name());
     values.push_back(sex);
     sex.setModified(false);
@@ -617,6 +625,7 @@ void Person::addUpdates(Updates& updates) {
     updateField(updates, table__, type);
     updateField(updates, table__, name);
     updateField(updates, table__, age);
+    updateField(updates, table__, pubdate);
     updateField(updates, table__, sex);
 }
 void Person::addIDUpdates(Updates& updates) {
@@ -626,6 +635,7 @@ void Person::getFieldTypes(std::vector<litesql::FieldType>& ftypes) {
     ftypes.push_back(Type);
     ftypes.push_back(Name);
     ftypes.push_back(Age);
+    ftypes.push_back(Pubdate);
     ftypes.push_back(Sex);
 }
 void Person::delRecord() {
@@ -678,6 +688,7 @@ std::auto_ptr<Person> Person::upcastCopy() {
     np->type = type;
     np->name = name;
     np->age = age;
+    np->pubdate = pubdate;
     np->sex = sex;
     np->inDatabase = inDatabase;
     return auto_ptr<Person>(np);
@@ -688,6 +699,7 @@ std::ostream & operator<<(std::ostream& os, Person o) {
     os << o.type.name() << " = " << o.type << std::endl;
     os << o.name.name() << " = " << o.name << std::endl;
     os << o.age.name() << " = " << o.age << std::endl;
+    os << o.pubdate.name() << " = " << o.pubdate << std::endl;
     os << o.sex.name() << " = " << o.sex << std::endl;
     os << "-------------------------------------" << std::endl;
     return os;
@@ -1412,7 +1424,7 @@ std::vector<litesql::Database::SchemaItem> ExampleDatabase::getSchema() const {
         res.push_back(Database::SchemaItem("School_seq","sequence","CREATE SEQUENCE School_seq START 1 INCREMENT 1"));
         res.push_back(Database::SchemaItem("Office_seq","sequence","CREATE SEQUENCE Office_seq START 1 INCREMENT 1"));
     }
-    res.push_back(Database::SchemaItem("Person_","table","CREATE TABLE Person_ (id_ " + backend->getRowIDType() + ",type_ TEXT,name_ TEXT,age_ INTEGER,sex_ INTEGER)"));
+    res.push_back(Database::SchemaItem("Person_","table","CREATE TABLE Person_ (id_ " + backend->getRowIDType() + ",type_ TEXT,name_ TEXT,age_ INTEGER,pubdate_ INTEGER,sex_ INTEGER)"));
     res.push_back(Database::SchemaItem("Role_","table","CREATE TABLE Role_ (id_ " + backend->getRowIDType() + ",type_ TEXT)"));
     res.push_back(Database::SchemaItem("Student_","table","CREATE TABLE Student_ (id_ " + backend->getRowIDType() + ")"));
     res.push_back(Database::SchemaItem("Employee_","table","CREATE TABLE Employee_ (id_ " + backend->getRowIDType() + ")"));
