@@ -698,6 +698,8 @@ public:
     litesql::Field<std::string> name;
     static const Person::FieldType Age;
     litesql::Field<int> age;
+    static const Person::FieldType Pubdate;
+    litesql::Field<litesql::Date> pubdate;
 protected:
     static std::vector < std::pair< std::string, std::string > > sex_values;
 public:
